# AyxCppTest

./: Add.h  CMakeLists.txt  GettingStarted.txt  Makefile  README.md  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise3_data.h  exercise3_fill.h  exercise4.cpp  exercise5.cpp  exercise6.cpp  main.cpp  polygon.cpp  polygon.h  spatial.cpp  spatial.h
